# ot-harjoitustyo

./: README.md  pyproject.toml
h-tyo/: .README.md.swp  README.md  pyproject.toml  tasks.py
h-tyo/dokumentaatio/: changelog.md  kayttoohje  kayttoohje.md  tuntikirjanpito.md  vaatimusmaarittelu.md
h-tyo/src/: database_connection.py  index.py  index_old.py  initialize_database.py  users_sheets_key.json
h-tyo/src/entities/: collectabble.py  user.py
h-tyo/src/repositories/: collections_repository.py  users.txt  users_repository.py
h-tyo/src/services/: collections_service.py
h-tyo/src/tests/: ui_test.py
h-tyo/src/ui/: all_collections_view.py  collection_view.py  login_view.py  new_user_view.py  ui.py
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/unicafe/src/tests/: maksukortti_test.py
