[tool.poetry]
name = "h-tyo"
version = "0.1.0"
description = ""
authors = ["Hogwarter <37118117+Hogwarter@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "h_tyo"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
