[tool.poetry]
name = "ohte"
version = "0.1.0"
description = ""
authors = ["Hogwarter <37118117+Hogwarter@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^5.0"
invoke = "^2.0.0"
coverage = "^7.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = "^7.2.3"
autopep8 = "^2.0.2"
pylint = "^2.17.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
