[tool.poetry]
name = "ohte"
version = "0.1.0"
description = ""
authors = ["Hogwarter <37118117+Hogwarter@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^5.0"
invoke = "^2.0.0"
coverage = "^7.2.3"
oauth2client = "^4.1.3"
pyopenssl = "^23.1.1"
pandas = "^2.0.1"
pygsheets = "^2.0.6"
google-spreadsheet = "^0.0.6"
google-auth-oauthlib = "^1.0.0"
google-api-python-client = "^2.86.0"
google-auth-httplib2 = "^0.1.0"
gspread = "^5.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = "^7.2.3"
autopep8 = "^2.0.2"
pylint = "^2.17.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
